app/_scss/main.scss
/* ... */
/* ==========================================================================
   Author's custom styles
   ========================================================================== */

   $screen-sm:   768px;
   $screen-xs:   480px;
   $bio-spacing: 26px;


@font-face {
 font-family: 'kelsea';
 src:url('../fonts/kelsea.eot?-ke4jel');
 src:url('../fonts/kelsea.eot?#iefix-ke4jel') format('embedded-opentype'),
   url('../fonts/kelsea.woff?-ke4jel') format('woff'),
   url('../fonts/kelsea.ttf?-ke4jel') format('truetype'),
   url('../fonts/kelsea.svg?-ke4jel#kelsea') format('svg');
 font-weight: normal;
 font-style: normal;
}

[class^="kels-"], [class*=" kels-"] {
 font-family: 'kelsea';
 speak: none;
 @include font-size(18);
 font-style: normal;
 font-weight: normal;
 font-variant: normal;
 text-transform: none;
 line-height: 1;

 /* Better Font Rendering =========== */
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
}

.kels-close:before {
 content: "\e600";
}
.kels-arrow-down:before {
 content: "\e601";
}
.kels-hamburger:before {
 content: "\e602";
}


html, body {
  height: 100%;
  font-family: "Cabin", sans-serif;
}

body {
  background-color: #000;
  overflow: hidden;
  position: relative;
  -webkit-font-smoothing: antialiased;
  font-smoothing: antialiased;

  .page-wrapper, .pages-wrapper {
    overflow: hidden;
    background-color: #000;
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px; //this stretches content out to fill parent without percentage issues
    width: 100%;
    background-color: #000;
    z-index: 10;
  }

  .page-wrapper {
    transition: all .7s cubic-bezier(.45,-0.8,.55,1.8) 0.35s;
  }

  .pages-wrapper {
    transition: all .6s cubic-bezier(0.86, 0, 0.07, 1);
  }

  &.is-showing-work {

    .page-wrapper {
       bottom: 100%;

       #bio{
         opacity: 0;
       }

      }

      .back-to-top-wrapper {
        transform: rotateZ(0deg) !important;
      }

      #work {
        opacity: 1;
        overflow-y: scroll;
      }
    }

  &.is-showing-menu {

    .pages-wrapper {
      left: 100%;
    }

    #contactLink {
      color: #949494;
    }
  }
}


.menu-button-wrapper {
  position: absolute;
  top: 20px;
  left: 15px;
  height: 25px;
  width: 35px;
  z-index: 5;
  color: #000;

  a {
    color: #000;
    &:hover {
      text-decoration: none;
    }
  }

  @media(max-width: $screen-sm) {
      height: 20px;
      width: 27px;
      top: 10px;
      left: 5px;

      &:hover {
        opacity: 1;
      }
  }
}
/* ... */

